[project]
name = "dumblellm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.13"
dependencies = [
    "sentencepiece>=0.2.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[dependency-groups]
dev = [
    "black>=24.10.0",
    "notebook>=7.3.1",
]
